[package]
name = "mini_langchain_core"
version = "0.1.0"
edition = "2021"
authors = ["GrandpaEJ <grandpaej@example.com>"]
description = "A low-cost, cross-language LangChain implementation"
license = "MIT"
repository = "https://github.com/GrandpaEJ/Mini_LangChain"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1"
tiktoken-rs = "0.5"
