[package]
name = "mini_langchain_node"
version = "0.1.0"
edition = "2021"
authors = ["GrandpaEJ <grandpaej@example.com>"]
description = "Node.js bindings for Mini_LangChain"
license = "MIT"
repository = "https://github.com/GrandpaEJ/Mini_LangChain"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"
mini_langchain_core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
